# streamlit-msal

./: .gitignore  CODEOWNERS  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: release.yaml
msal_login/: __init__.py
msal_login/frontend/: package-lock.json  package.json
msal_login/frontend/public/: index.html
msal_login/frontend/src/: MsalComponent.tsx  index.tsx
